--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 version: '3'
 
 services:
+  
   backend:
     build: .
     container_name: api-ocr
@@ -14,9 +15,10 @@ services:
       - "5000:5000"
 
   frontend:
-    build: ./Frontend/.
+    build: /Frontend/.
     container_name: FE-ocr
     ports:
       - "3000:3000"
     depends_on:
       - backend
+
